--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -2,7 +2,9 @@
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
-
+  # - name: Events
+  #   url: event
+  #   weight: 40
 main:
   - name: Tour
     url: tour
@@ -13,9 +15,6 @@ main:
   - name: People
     url: people
     weight: 30
-  - name: Events
-    url: event
-    weight: 40
   - name: Publications
     url: publication
     weight: 50
