--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -76,7 +76,7 @@ features:
     content_dir: content
     branch: main
   avatar:
-    gravatar: false
+    gravatar: True
     shape: circle
   comment:
     provider: ''
