--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,7 +14,7 @@ main:
     url: people
     weight: 30
   - name: Publications
-    url: publication
+    url: publications
     weight: 50
   - name: Contact
     url: contact
