--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,12 +13,13 @@ main:
   - name: People
     url: people
     weight: 30
+#  - name: Events
+#    url: event
+#    weight: 40
   - name: Publications
     url: publication
     weight: 50
   - name: Contact
     url: contact
     weight: 60
-  - name: event
-    url: event
-    weight: 40
+
